apps/frontend/src/app/globals.css
@import 'tailwindcss';
/*---break---*/
@plugin "tailwindcss-animate";
/*---break---*/
@custom-variant dark (&:is(.dark *));

/************** Scrollbar **************/

html {
  min-height: 100vh;
  overflow-y: scroll;
}

body {
  min-height: 100vh;
}

::-webkit-scrollbar {
  width: 1rem; /* w-4 */
}

/* Track */
::-webkit-scrollbar-track {
  background-color: rgb(39 39 42 / 0.5); /* bg-zinc-800/50 */
  border-radius: 9999px; /* rounded-full */
}

/* Handle */
::-webkit-scrollbar-thumb {
  background-color: rgb(113 113 122); /* bg-zinc-500 */
  width: 0.5rem; /* w-2 */
  border-radius: 9999px; /* rounded-full */
  border: 1rem solid transparent; /* border-4 */
  background-clip: content-box; /* bg-clip-content */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background-color: rgb(82 82 91); /* bg-zinc-600 */
}

/* Handle on active */
::-webkit-scrollbar-thumb:active {
  background-color: rgb(63 63 70); /* bg-zinc-700 */
}

/************** Animations **************/

@keyframes bounce2 {
  25% {
    transform-origin: center bottom;
    transform: translateY(-12%) rotateZ(-4deg);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
  0%,
  50%,
  100% {
    transform: none;
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
  }
  75% {
    transform-origin: center bottom;
    transform: translateY(-12%) rotateZ(4deg);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
}

@keyframes nbw-glow {
  0% {
    filter: saturate(150%) brightness(140%) hue-rotate(-10deg)
      drop-shadow(0px 0px 10px rgba(50, 149, 255, 0.75));
  }
  50% {
    filter: saturate(100%) brightness(100%) hue-rotate(0deg)
      drop-shadow(0px 0px 0px rgba(50, 149, 255, 0));
  }
  100% {
    filter: saturate(150%) brightness(140%) hue-rotate(-10deg)
      drop-shadow(0px 0px 10px rgba(50, 149, 255, 0.75));
  }
}

@keyframes shake {
  0% {
    transform: translateX(0) translateY(-1px);
  }
  12.5% {
    transform: translateX(1px) translateY(3px);
  }
  25% {
    transform: translateX(-3px) translateY(1px);
  }
  37.5% {
    transform: translateX(3px) translateY(-1px);
  }
  50% {
    transform: translateX(1px) translateY(-3px);
  }
  62.5% {
    transform: translateX(-2px) translateY(3px);
  }
  75% {
    transform: translateX(-1px) translateY(2px);
  }
  87.5% {
    transform: translateX(3px) translateY(-2px);
  }
  100% {
    transform: translateX(0) translateY(-1px);
  }
}

/************** Loading bar **************/

#nprogress {
  /* See: https://github.com/rstacruz/nprogress/issues/56#issuecomment-41505532 */
  position: relative;
  z-index: 9999;
}

/************** Spinner **************/

.loader {
  width: 16px;
  height: 16px;
  border: 2px solid #fff;
  border-bottom-color: transparent;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/************** Google reCAPTCHA badge **************/

.grecaptcha-badge {
  visibility: hidden !important;
  position: fixed;
  bottom: 100px !important;
}

/************** Prevent trailing lines on Chrome **************/
/* https://stackoverflow.com/a/25799659/9045426 */

.bevel {
  position: relative;
  --bevel-after-bg: var(--color-zinc-700);
  --bevel-before-bg: var(--color-zinc-800);
}
.bevel:after,
.bevel:before {
  content: '';
  position: absolute;
}
.bevel:after {
  width: 100%;
  height: 8px;
  left: 4px;
  top: 0;
  transform: translatey(-100%) skewx(-45deg);
  background: var(--bevel-after-bg);
}
.bevel:before {
  width: 8px;
  height: 100%;
  right: 0;
  transform: translatex(100%) skewy(-45deg);
  top: -4px;
  background: var(--bevel-before-bg);
}

/************** Google AdSense **************/

/* Hide unfilled ads */
/* https://support.google.com/adsense/answer/10762946?hl=en */
ins.adsbygoogle[data-ad-status='unfilled'] {
  display: none !important;
}
/*---break---*/
@theme inline {
  --transition-timing-function-out-back: cubic-bezier(0.34, 1.56, 0.51, 1.2);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}
/*---break---*/
:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}
/*---break---*/
.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}
/*---break---*/
@layer base {
  * {
    border-color: var(--color-border);
    outline-color: var(--color-ring);
    outline-opacity: 0.5;
  }
  body {
    background-color: var(--color-background);
    color: var(--color-foreground);
  }
}

